# reamark

./: .env.example  .gitignore  Caddyfile  EMAIL_DELIVERABILITY.md  LICENSING.md  README.md  REAMARK_V1_SPEC.md  ROADMAP.md  ROADMAP_COMPACT.md  ReaMarkStyle.md  claude.md  docker-compose.caddy.yml  docker-compose.ghcr.yml  seed_templates.py
.github/workflows/: vst3-release.yml
backend/: requirements.txt
backend/app/: auth.py  email_service.py  main.py  models.py  schemas.py
backend/app/routers/: admin.py  comments.py  projects.py  settings.py
docs/: DEMO.md
frontend/admin/: index.html
frontend/admin/js/: admin.js
frontend/client/: index.html
frontend/client/js/: client.js
reaper/: mixnote.lua  mixnote_comments.lua  mixnote_v2.lua  reamark.lua  reamark_v1.lua
scripts/: demo-reset.sh
vst3/: .gitignore  CHANGELOG.md  CMakeLists.txt  PULL_REQUEST_TEMPLATE.md  docsARCHITECTURE.md  docsBUILD.md
vst3/Source/: CommentListComponent.cpp  CommentListComponent.h  MixnoteApi.cpp  MixnoteApi.h  MixnoteModels.h  MixnoteTheme.cpp  MixnoteTheme.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReaMarkApi.cpp  ReaMarkApi.h  ReaMarkModels.h  ReaMarkTheme.cpp  ReaMarkTheme.h  WaveformComponent.cpp  WaveformComponent.h
